deploy/metrics-dep.yaml
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: mighty-fine
  namespace: dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: mighty-fine
    spec:
      containers:
      - name: mighty-fine
        image: quay.io/brice/metrics-demo:v4-subscription-service
        ports:
        - containerPort: 3000
