deploy/metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mighty-fine
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: mighty-fine
  ports:
    - port: 80
      name: http
      targetPort: 3000
