deploy/podinfo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  creationTimestamp: null
  name: podinfo
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - path: /podinfo
        backend:
          serviceName: podinfo
          servicePort: 9898
      - path: /mighty-fine
        backend:
          serviceName: mighty-fine
          servicePort: 80
status:
  loadBalancer: {}
